<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tk.foursquaresearch.view.FourSquareViewActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:context=".LinearLayout"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".LinearLayout"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:hint="@string/hint_text_not_ready"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />
            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="onClick"
                tools:layout_editor_absoluteY="16dp"
                app:layout_constraintHorizontal_bias="0.777" />
        </LinearLayout>

        <ListView
            android:id="@+id/searchList"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </ListView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
